# brr

./: .dockerignore  .gitignore  AGENTS.md  Containerfile.rhel8  EXAMPLE_OUTPUT.md  LICENSE  PACKAGING.md  README.md  pyproject.toml  run_fio_and_biolatency.sh
.github/workflows/: release.yml
docs/: perf-correctness-validation.md
scripts/: assemble_release.py  build_release.py  build_rhel8_binary.sh  build_rhel8_release.sh  pyinstaller_entrypoint.py
src/brr/: __init__.py  app.py  bpf_details.py  cli.py  dump_compare.py  errors.py  inspection.py  models.py  profiler.py  reporter.py  source_context.py  top.py
src/brr/collector/: __init__.py  bpffs.py  service.py  syscall.py
src/brr/render/: __init__.py  brr_text.py  csv_output.py  json_output.py  text.py
tests/: test_activity_refresh.py  test_activity_render.py  test_cli_defaults.py  test_cli_perf_buffers.py  test_inspection_render.py  test_profile_accumulator.py  test_profile_attribution_output.py  test_profiler_buffers.py  test_profiler_polling.py  test_profiler_ring.py  test_release_assembly.py  test_release_build.py  test_top_inspect_state.py
