[project]
name = "brr"
version = "0.4.1"
description = "eBPF Runtime Reporter and Profiler by Tanel Poder (tanelpoder.com)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tanel Poder", email = "tanel@tanelpoder.com" },
]
dependencies = [
    "textual>=8.2.5",
]

[project.urls]
Homepage = "https://tanelpoder.com"

[project.scripts]
brr = "brr.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]
package = [
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "correctness: live correctness harness tests",
    "live: tests that require live kernel eBPF state",
    "stress: tests that start stress workloads",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
